--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -5,15 +5,29 @@ on:
   push:
     branches: [ "master" ]
   schedule:
-    - cron: "0 1 * * *"
+    - cron: 40 */4 * * *
 
 jobs:
-  build:
+  version:
     runs-on: ubuntu-latest
-
+    steps:
+      - uses: actions/checkout@v4.2.2
+      - run: curl --fail 'https://ggpk.exposed/version?poe=1' | sed -r 's|.*/([0-9](\.[0-9]+)+)/$|\1|' > version.txt
+      - run: git ls-remote https://github.com/poe-tool-dev/dat-schema.git refs/heads/main > schema.txt
+      - id: version
+        run: echo "version=$(cat version.txt)" >> "$GITHUB_OUTPUT"
+      - id: autocommit
+        uses: stefanzweifel/git-auto-commit-action@v5.2.0
+        with:
+          commit_message: "[skip ci] Version ${{ steps.version.outputs.version }}"
     outputs:
       changes_detected: ${{ steps.autocommit.outputs.changes_detected }}
+      version: ${{ steps.version.outputs.version }}
 
+  build:
+    runs-on: ubuntu-latest
+    needs: version
+    if: github.event_name != 'schedule' || needs.version.outputs.changes_detected == 'true'
     steps:
       - name: checkout
         uses: actions/checkout@v4.2.2
@@ -36,10 +50,6 @@ jobs:
         with:
           python-version: "3.13"
           cache: poetry
-      - run: curl --fail 'https://ggpk.exposed/version?poe=1' | sed -r 's|.*/([0-9](\.[0-9]+)+)/$|\1|' > poe1/version.txt
-      - run: git ls-remote https://github.com/poe-tool-dev/dat-schema.git refs/heads/main > poe1/schema.txt
-      - run: echo "version=$(cat poe1/version.txt)" >> "$GITHUB_OUTPUT"
-        id: version
       - name: clean data dir
         run: find poe1/data '(' -name '*.json' -not -path '*/pob/*' -o -name '*.html' -o -name '*.txt' ')' -delete -print | wc -l
       - run: poetry install
@@ -64,33 +74,26 @@ jobs:
           find data -name index.html -exec sed -i 's|<h1>RePoE|<h1><a href="https://github.com/repoe-fork/repoe-fork">RePoE</a>|' {} \;
           mv index.html poe1.html
           cat README.md | pipx run grip - --export data/index.html
-        working-directory: poe1/data
+        working-directory: poe1
       - name: commit changes
         id: autocommit
         uses: stefanzweifel/git-auto-commit-action@v5.2.0
         with:
           repository: poe1
-          commit_message: "[skip ci] Version ${{ steps.version.outputs.version }}"
-      - name: upload gh-pages artifact
-        if: github.event_name != 'schedule' || steps.autocommit.outputs.changes_detected == 'true'
-        uses: actions/upload-pages-artifact@v3.0.1
+          commit_message: "[skip ci] Export ${{ needs.version.outputs.version }}"
+      - uses: actions/upload-pages-artifact@v3.0.1
         with:
           path: poe1/data
 
   deploy:
     runs-on: ubuntu-latest
-
     needs: build
-    if: github.event_name != 'schedule' || needs.build.outputs.changes_detected == 'true'
-
     permissions:
       pages: write
       id-token: write
-
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-
     steps:
       - name: deploy gh-pages
         id: deployment
