--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -24,6 +24,7 @@ jobs:
           commit_message: "[skip ci] Version ${{ steps.version.outputs.version }}"
     outputs:
       changes_detected: ${{ steps.autocommit.outputs.changes_detected }}
+      commit_hash: ${{ steps.autocommit.outputs.commit_hash }}
       version: ${{ steps.version.outputs.version }}
 
   build:
@@ -35,6 +36,7 @@ jobs:
         uses: actions/checkout@v4.2.2
         with:
           path: poe1
+          ref: ${{ needs.version.outputs.commit_hash }}
       - name: checkout repoe
         uses: actions/checkout@v4.2.2
         with:
