--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -7,6 +7,10 @@ on:
   schedule:
     - cron: 40 */4 * * *
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   version:
     runs-on: ubuntu-latest
