--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -94,6 +94,7 @@ jobs:
       - uses: actions/upload-pages-artifact@v4.0.0
         with:
           path: poe1/data
+          retention-days: 90
 
   deploy:
     runs-on: ubuntu-latest
